# ROS

./: README.md
go_to/: CMakeLists.txt  package.xml
go_to/launch/: Start.launch
go_to/src/: go_to.cpp
robotcraft2024_driver_g3/: CMakeLists.txt  package.xml
robotcraft2024_driver_g3/launch/: robot_bringup.launch  robot_driver.launch  robot_firmware.launch
robotcraft2024_driver_g3/src/: robot_driver.cpp  square_test.cpp
robotcraft_maze/: CMakeLists.txt
robotcraft_maze/launch/: amcl.launch  maze.launch
robotcraft_maze/src/: grid_generator.py  mazePorBack.cpp  maze_BASICsolver.cpp  maze_PROsolver.cpp
robotcraft_maze/world/: C_matrix.txt  P_path.txt  grid_matrix.txt  out.txt  robotcraft2019_robot.inc  robotcraft_maze.world
robotcraft_robot_description/rviz/: robotcraft_robot.rviz
service/: CMakeLists.txt  package.xml
service/launch/: controller.launch
service/src/: client.cpp  server.cpp  test.cpp
service/srv/: Status.srv
simstage_group3/: CMakeLists.txt  github.txt  package.xml
simstage_group3/launch/: gmapping.launch  reactive.launch  teleop.launch
simstage_group3/robots/: simple_robot.inc  wall-e.inc
simstage_group3/script/: reactive_navigation.py
simstage_group3/worlds/: rooms.world
stage_tutorial/: CMakeLists.txt  package.xml
stage_tutorial/config/: simple_robot.yaml
stage_tutorial/launch/: amcl.launch  gmapping.launch  reactive_navigation.launch  teleop.launch
stage_tutorial/maps/: ctcv.yaml  move_base_arena.yaml
stage_tutorial/maps_slam/: map.pgm  map.yaml
turtlebot_control/: CMakeLists.txt  README.md  package.xml
(+5 files in other folders)
